fix: preserve Dirent class methods when selecting items and prevent checkbox focus outline when shift key down

--- a/frontend/src/css/dirent-list-item.css
+++ b/frontend/src/css/dirent-list-item.css
@@ -141,6 +141,7 @@
 }
 
 .dirent-item-name-text a {
+  width: fit-content;
   display: block;
   overflow: hidden;
   text-overflow: ellipsis;
